--- a/apply.html
+++ b/apply.html
@@ -29,8 +29,8 @@
   <link rel="stylesheet" href="css/common.css?v=6">
   <link rel="stylesheet" href="css/apply.css?v=3">
   <!-- external js -->
-  <script src="js/common.js?v=1"></script>
-  <script src="js/apply.js?v=7"></script>
+  <script src="js/common.js?v=3"></script>
+  <script src="js/apply.js?v=9"></script>
 </head>
 <body>
   <div class="content">
@@ -75,7 +75,7 @@
       <div id="advanced_options" class="collapse mb-3">
 
         <!-- 搜尋模式 -->
-        <div class="form-group" style="float: right;">
+        <div class="form-group float-right">
           <span id="mode-title">搜尋模式：</span>
           <div class="custom-control custom-radio custom-control-inline">
             <input type="radio" id="mode-indexof" name="mode" class="custom-control-input" value="1" onchange="update()" checked="checked">
