add apply term explanation

--- a/advanced.html
+++ b/advanced.html
@@ -164,7 +164,7 @@
       </table>
 
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
-      <p style="text-align: center">
+      <p style="text-align: center; font-size: 0.9rem;">
         本查詢結果僅供參考，實際內容以正式簡章為主。
       </p>
       
