--- a/apply.html
+++ b/apply.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="css/common.css?v=7">
   <link rel="stylesheet" href="css/apply.css?v=4">
   <!-- external js -->
-  <script src="js/common.js?v=3"></script>
+  <script src="js/common.js?v=4"></script>
   <script src="js/apply.js?v=9"></script>
 </head>
 <body>
@@ -206,8 +206,13 @@
       </table>
 
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
-      <p style="text-align: center">
+      <p style="text-align: center; font-size: 0.9rem;">
         本查詢結果僅供參考，實際內容以正式簡章為主。
+      </p>
+      <p style="text-align: center; font-size: 0.8rem;">
+        以灰底字標示之科目，表示其未設定篩選倍率，但超篩仍可能採計，請務必注意。
+        <br>
+        顯示順序以<b>標準</b>、<b>一階</b>(表示一階會採計但未設標)、<b>二階</b>依次優先顯示。因此，若某科目一階及二階皆採計，則該科會顯示標準或「一階」。
       </p>
 
     </div>
