--- a/index.html
+++ b/index.html
@@ -24,37 +24,36 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=3">
+  <link rel="stylesheet" href="css/common.css?v=4">
 </head>
 <body>
   <div class="content">
-    <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
+    <nav class="navbar navbar-expand navbar-light bg-light">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/">首頁</a>
         <a class="nav-item nav-link" href="apply.html">個人申請</a>
         <a class="nav-item nav-link" href="advanced.html">考試分發</a>
       </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1>學測、指考採計科目查詢</h1>
-        <h2>點擊上方的「個人申請」或者是「考試分發」，就可以開始查詢囉！</h2>
-      </div>
+    <div class="container pt-4 pb-3">
+      <h1>學測、指考採計科目查詢</h1>
+      <p>點擊上方的「個人申請」或者是「考試分發」，就可以開始查詢囉！</p>
     </div>
+
     <div class="container">
-      <h3>資料來源</h3>
+      <h2>資料來源</h2>
       <p>
         個人申請：<a href="https://www.cac.edu.tw/" target="_blank">大學甄選入學委員會</a><br>
         考試分發：<a href="https://www.uac.edu.tw/" target="_blank">大學考試入學分發委員會</a>
       </p>
-      <h3>問題回報及功能建議</h3>
+      <h2>問題回報及功能建議</h2>
       <ul>
         <li><b>Email:</b> jacky030607@gmail.com</li>
         <li><b>Telegram:</b> @iteresonator</li>
       </ul>
     </div>
   </div>
-  <div class="footer">
+  <div class="footer bg-light">
     <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
   </div>
 </body>
