--- a/advanced.html
+++ b/advanced.html
@@ -26,35 +26,33 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=6">
-  <link rel="stylesheet" href="css/advanced.css?v=2">
+  <link rel="stylesheet" href="css/common.css?v=7">
+  <link rel="stylesheet" href="css/advanced.css?v=3">
   <!-- external js -->
   <script src="js/common.js?v=2"></script>
   <script src="js/advanced.js?v=6"></script>
 </head>
 <body>
   <div class="content">
-    <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
+    <nav class="navbar navbar-expand navbar-light bg-light">
       <div class="navbar-nav mr-auto">
         <a class="nav-item nav-link" href="/">首頁</a>
         <a class="nav-item nav-link" href="apply.html">個人申請</a>
         <a class="nav-item nav-link active" href="advanced.html">考試分發</a>
       </div>
       <span class="navbar-text d-md-none">
-        <h1><span class="badge badge-secondary">109學年</span></h1>
+        <p><span class="badge badge-secondary">109學年</span></p>
       </span>
     </nav>
 
     <!-- title bar -->
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1>
-          指考考試分發 - 採計科目查詢 
-          <span class="d-none d-md-inline">
-            <span class="badge badge-secondary">109學年</span>
-          </span>
-        </h1>
-      </div>
+    <div class="container pt-4 pb-3">
+      <h1>
+        指考考試分發 - 採計科目查詢
+        <span class="d-none d-md-inline">
+          <span class="badge badge-secondary">109學年</span>
+        </span>
+      </h1>
     </div>
 
     <div class="container">
@@ -164,13 +162,16 @@
       </table>
 
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
-      <p style="text-align: center; font-size: 0.9rem;">
+      <p id="caution" style="text-align: center;">
         本查詢結果僅供參考，實際內容以正式簡章為主。
+      </p>
+      <p class="text-secondary d-md-none" style="text-align: center; font-size: 0.8rem;">
+        提醒您，使用大螢幕設備（如平板電腦、桌上型電腦）查詢時，可進一步顯示權重。
       </p>
       
     </div>
   </div>
-  <div class="footer">
+  <div class="footer bg-light">
     資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json" target="_blank">20191102</a> |
     <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
   </div>
