fix:the badge at the top-right corner is too small

--- a/advanced.html
+++ b/advanced.html
@@ -41,7 +41,7 @@
         <a class="nav-item nav-link active" href="advanced.html">考試分發</a>
       </div>
       <span class="navbar-text d-md-none">
-        <p><span class="badge badge-secondary">109學年</span></p>
+        <h1><span class="badge badge-secondary">109學年</span></h1>
       </span>
     </nav>
 
