edit caution &create hyperlink to offical document

--- a/advanced.html
+++ b/advanced.html
@@ -179,7 +179,7 @@
 
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
       <p id="caution" style="text-align: center;">
-        本查詢結果僅供參考，實際內容以正式簡章為主。
+        本查詢結果僅供參考，實際內容以<a href="https://www.uac.edu.tw/colleges.htm" target="_blank">正式簡章</a>為主。
       </p>
       <p class="text-secondary d-md-none" style="text-align: center; font-size: 0.8rem;">
         提醒您，使用大螢幕設備（如平板電腦、桌上型電腦）查詢時，可進一步顯示權重。
