--- a/apply.html
+++ b/apply.html
@@ -205,12 +205,12 @@
 
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
       <p id="caution" style="text-align: center;">
-        本查詢結果僅供參考，實際內容以正式簡章為主。
+        本查詢結果僅供參考，實際內容以<a href="https://www.cac.edu.tw/apply109/query.php" target="_blank">正式簡章</a>為主。
       </p>
-      <p class="text-secondary" style="text-align: center; font-size: 0.8rem;">
-        以灰底字標示之科目，表示其未設定篩選倍率，但超篩仍可能採計，請務必注意。
+      <p class="text-secondary" id="caution2" style="text-align: center;">
+        以灰色字標示之科目，表示其未設定篩選倍率，但超篩仍可能採計，請務必注意。
         <br>
-        顯示順序以<b>標準</b>、<b>一階</b>(表示一階會採計但未設標)、<b>二階</b>依次優先顯示。因此，若某科目一階及二階皆採計，則該科會顯示標準或「一階」。
+        顯示順序以<b>標準</b>、<b>一階</b>(表示一階會採計但未設標)、<b>二階</b>依次優先顯示。因此，若某科目一階及二階皆採計，則該科會顯示<b>標準</b>或<b>一階</b>。
       </p>
 
     </div>
