--- a/advanced.html
+++ b/advanced.html
@@ -188,8 +188,8 @@
     </div>
   </div>
   <div class="footer bg-light">
-    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json" target="_blank">20191102</a> |
-    <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
+    資料版本：<a href="https://github.com/lashhw/applytool/blob/master/data/advanced/data.json" target="_blank">20191102</a> |
+    <a href="https://github.com/lashhw/applytool" target="_blank">GitHub</a>
   </div>
 </body>
 </html>
