--- a/apply.html
+++ b/apply.html
@@ -216,8 +216,8 @@
     </div>
   </div>
   <div class="footer bg-light">
-    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json" target="_blank">20191101</a> |
-    <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
+    資料版本：<a href="https://github.com/lashhw/applytool/blob/master/data/apply/data.json" target="_blank">20191101</a> |
+    <a href="https://github.com/lashhw/applytool" target="_blank">GitHub</a>
   </div>
 </body>
 </html>
