--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       </p>
       <h2>問題回報及功能建議</h2>
       <ul>
-        <li><b>Email:</b> jacky030607@gmail.com</li>
-        <li><b>Telegram:</b> @iteresonator</li>
+        <li><b>Email:</b> lashhw81@gmail.com</li>
+        <li><b>Telegram:</b> @lashhw</li>
       </ul>
     </div>
   </div>
   <div class="footer bg-light">
-    <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
+    <a href="https://github.com/lashhw/applytool" target="_blank">GitHub</a>
   </div>
 </body>
 </html>
