--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="109 學測個人申請、指考考試入學採計科目及檢定標準綜合查詢小工具。">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
   <title>學測、指考採計科目查詢</title>
-  <link rel="canonical" href="https://apply.nctu.me"/>
+  <link rel="canonical" href="https://applytool.netlify.app"/>
   <!-- bootstrap, jquery and popper.js-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
