--- a/advanced.html
+++ b/advanced.html
@@ -7,7 +7,7 @@
   <meta name="description" content="110 指考考試入學採計科目及檢定標準綜合查詢小工具。">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
   <title>指考考試分發 - 採計科目查詢（110學年）</title>
-  <link rel="canonical" href="https://apply.nctu.me/advanced.html"/>
+  <link rel="canonical" href="https://applytool.netlify.app/advanced.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
