--- a/apply.html
+++ b/apply.html
@@ -7,7 +7,7 @@
   <meta name="description" content="109 學測個人申請採計科目及檢定標準綜合查詢小工具。">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
   <title>學測個人申請 - 採計科目查詢（109學年）</title>
-  <link rel="canonical" href="https://apply.nctu.me/apply.html"/>
+  <link rel="canonical" href="https://applytool.netlify.app/apply.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
