update 110 apply data

--- a/apply.html
+++ b/apply.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
-  <meta name="description" content="109 學測個人申請採計科目及檢定標準綜合查詢小工具。">
+  <meta name="description" content="110 學測個人申請採計科目及檢定標準綜合查詢小工具。">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
-  <title>學測個人申請 - 採計科目查詢（109學年）</title>
+  <title>學測個人申請 - 採計科目查詢（110學年）</title>
   <link rel="canonical" href="https://applytool.netlify.app/apply.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/apply.css?v=5">
   <!-- external js -->
   <script src="js/common.js?v=6"></script>
-  <script src="js/apply.js?v=9"></script>
+  <script src="js/apply.js?v=10"></script>
 </head>
 <body>
   <div class="content">
@@ -31,7 +31,7 @@
         <a class="nav-item nav-link" href="advanced.html">考試分發</a>
       </div>
       <span class="navbar-text d-md-none">
-        <h1><span class="badge badge-secondary">109學年</span></h1>
+        <h1><span class="badge badge-secondary">110學年</span></h1>
       </span>
     </nav>
 
@@ -40,7 +40,7 @@
       <h1>
         學測個人申請 - 採計科目查詢 
         <span class="d-none d-md-inline">
-          <span class="badge badge-secondary">109學年</span>
+          <span class="badge badge-secondary">110學年</span>
         </span>
       </h1>
     </div>
@@ -195,18 +195,18 @@
 
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
       <p id="caution" style="text-align: center;">
-        本查詢結果僅供參考，實際內容以<a href="https://www.cac.edu.tw/apply109/query.php" target="_blank">正式簡章</a>為主。
+        本查詢結果僅供參考，實際內容以<a href="https://www.cac.edu.tw/apply110/query.php" target="_blank">正式簡章</a>為主。
       </p>
       <p class="text-secondary" id="caution2" style="text-align: center;">
-        以灰色字標示之科目，表示其未設定篩選倍率，但超篩仍可能採計，請務必注意。
+        以灰色字標示之科目，表示其一階未設定篩選倍率，但超篩仍可能採計，請務必注意。
         <br>
-        顯示順序以<b>標準</b>、<b>一階</b>(表示一階會採計但未設標)、<b>二階</b>依次優先顯示。因此，若某科目一階及二階皆採計，則該科會顯示<b>標準</b>或<b>一階</b>。
+        顯示順序以<b>標準</b>(如前標、均標)、<b>一階</b>(表示一階會採計但未設標)、<b>二階</b>依次優先顯示。因此，若某科目一階採計均標且二階也會採計，則該科會顯示<b>均標</b>。
       </p>
 
     </div>
   </div>
   <div class="footer bg-light">
-    資料版本：<a href="https://github.com/lashhw/applytool/blob/master/data/apply/data.json" target="_blank">20191101</a> |
+    資料版本：<a href="https://github.com/lashhw/applytool/blob/master/data/apply/data.json" target="_blank">20201105</a> |
     <a href="https://github.com/lashhw/applytool" target="_blank">GitHub</a>
   </div>
 </body>
